# hotswap-example

./: Cargo.toml  readme.md
crates/salutation/: Cargo.toml
crates/salutation/src/: bindings.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: bindings.rs  lib.rs
wit/salutation/: cli.wit  salutation.wit  types.wit
