[package]
name = "salutation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.30.0", features = ["bitflags"] }

[package.metadata.component]
package = "hotswap:salutation"

[package.metadata.component.target]
path = "../../wit/salutation"
world = "app"
